# llm-evalbox

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: adapters.md  docker.md
e2e/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml
e2e/flows/: setup-run-results.spec.ts
llm_evalbox/: __init__.py  __main__.py  _version.py  cli.py
llm_evalbox/adapters/: __init__.py  auth.py  auto.py  base.py  capabilities.py  chat_completions.py  learned.py  ratelimit.py  responses.py  retry.py  url_rewrite.py
llm_evalbox/cache/: __init__.py  capabilities_db.py  history.py  profiles_db.py  responses.py  store.py
llm_evalbox/config/: __init__.py  defaults.py  env.py  profile.py
llm_evalbox/core/: __init__.py  exceptions.py  logging.py  messages.py  request.py  thinking.py
llm_evalbox/data/: README.md  manifest.yaml
llm_evalbox/eval/: __init__.py  _cache_aware.py  _mc_common.py  arc.py  base.py  bbq.py  datasets.py  extract.py  gsm8k.py  hellaswag.py  humaneval.py  livecodebench.py  mathqa.py  mbpp.py  mmlu.py  mmlu_pro.py  multilingual_mmlu.py  safetybench.py  truthfulqa.py  winogrande.py
llm_evalbox/eval/_sandbox/: __init__.py  docker_runner.py  e2b_runner.py  policy.py  runner.py
llm_evalbox/pricing/: __init__.py  catalog.yaml  compute.py
llm_evalbox/reports/: __init__.py  html.py  json_report.py  markdown.py  table.py
llm_evalbox/web/: __init__.py  schemas.py  server.py  state.py
llm_evalbox/web/routes/: benchmarks.py  capabilities.py  connection.py  defaults.py  history.py  models.py  pricing.py  profiles.py  runs.py  shares.py
scripts/: _hatch_build_frontend.py  build_frontend.py  docker-entrypoint.sh
tests/: conftest.py  test_cache.py  test_cache_history.py  test_cache_history_meta.py  test_capabilities_db.py  test_cli.py  test_cost.py  test_profiles_db.py  test_store_dirs.py
tests/test_adapters/: test_capabilities.py  test_chat_completions.py  test_learned.py  test_responses.py  test_thinking_mapping.py  test_url_rewrite.py
tests/test_eval/: test_base.py  test_e2b_stub.py  test_extract.py  test_humaneval_sandbox.py  test_mbpp_livecodebench.py  test_mmlu.py  test_new_benches.py  test_prompt_cache.py  test_sandbox_tier.py
tests/test_reports/: test_export.py
tests/test_web/: test_api.py  test_bind_token.py  test_connection_rewrite.py  test_defaults.py  test_history_patch.py  test_profiles_route.py  test_shares.py
web_src/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
web_src/src/: App.tsx  main.tsx
web_src/src/components/: benchmark-grid.tsx  connection-card.tsx  cost-preview.tsx  live-log-panel.tsx  locale-toggle.tsx  options-card.tsx  profile-selector.tsx  run-history-sidebar.tsx  run-messages.tsx  run-meta-editor.tsx  run-panel.tsx  thinking-toggle.tsx
web_src/src/i18n/: en.json  index.ts  ko.json
web_src/src/lib/: api.ts  format.test.ts  format.ts  history.ts  sse.ts  store.test.ts  store.ts
web_src/src/pages/: Results.tsx  Running.tsx  Setup.tsx
(+9 files in other folders)
